--- a/src/public/scss/widgets/_sidebar.scss
+++ b/src/public/scss/widgets/_sidebar.scss
@@ -18,7 +18,7 @@
     @include flex-full-fix;
   }
 
-  [sidebar-close] {
+  [data-sidebar-close] {
     @include flex-fix;
     @include button-picto;
 
