--- a/src/public/scss/widgets/_planning.scss
+++ b/src/public/scss/widgets/_planning.scss
@@ -189,13 +189,7 @@ $zindex-planning-item: 10;
 */
 .widget-planning-content {
   .widget-planning-dayoff {
-    background: repeating-linear-gradient(
-      -45deg,
-      $background-color-empty,
-      $background-color-empty $background-stripes-width,
-      $background-color-light $background-stripes-width,
-      $background-color-light ($background-stripes-width * 2)
-    );
+    @include background-stripes($background-color-empty, $background-color-light);
   }
 }
 
@@ -286,13 +280,7 @@ $zindex-planning-item: 10;
 }
 
 .widget-planning-item-part-off {
-  background: repeating-linear-gradient(
-    -45deg,
-    transparent,
-    transparent $background-stripes-width,
-    $background-color-light $background-stripes-width,
-    $background-color-light ($background-stripes-width * 2)
-  );
+  @include background-stripes(transparent, $background-color-light);
 }
 
 .widget-planning-item-txt {
