--- a/src/public/scss/abstracts/_variables.scss
+++ b/src/public/scss/abstracts/_variables.scss
@@ -1,16 +1,16 @@
 $color-base: #000;
-$color-error: red;
-$color-filled: #fff;
+$color-error: #F00;
+$color-filled: #FFF;
 
 $border-color-dark: #000;
-$border-color-light: rgba(0,0,0,.06);
-$border-color-filled-light: rgba(255,255,255,.15);
+$border-color-light: rgba(0, 0, 0, .06);
+$border-color-filled-light: rgba(255, 255, 255, .15);
 
-$background-color-empty: #fff;
-$background-color-light: #f2f2f2;
-$background-color-light-hover: #f6f6f6;
-$background-color-filled: #4268d5;
-$background-color-filled-light: rgba(255,255,255,.15);
+$background-color-empty: #FFF;
+$background-color-light: #F2F2F2;
+$background-color-light-hover: #F6F6F6;
+$background-color-filled: #4268D5;
+$background-color-filled-light: rgba(255, 255, 255, .15);
 
 $hover-transition-time: 150ms;
 
