--- a/src/public/scss/widgets/_planning.scss
+++ b/src/public/scss/widgets/_planning.scss
@@ -5,13 +5,11 @@ $zindex-planning-label: 20;
 // Items must be on front of the grid.
 $zindex-planning-item: 10;
 
-/*********************************************************/
-/************* Main containers */
-/*********************************************************/
+// *******************************************************
+// ************ Main containers
+// *******************************************************
 
-/**
-  The widget planning.
-*/
+// The widget planning.
 .widget-planning {
   bottom: 50px; // to let space for horizontal scrollbar.
   left: 0;
@@ -20,10 +18,8 @@ $zindex-planning-item: 10;
   top: 0;
 }
 
-/**
-  This is the container for the whole widget.
-  Used to set scrollbars.
-*/
+// This is the container for the whole widget.
+// Used to set scrollbars.
 .widget-planning-container {
   height: 100%;
   overflow-x: scroll;
@@ -32,9 +28,7 @@ $zindex-planning-item: 10;
   width: 100%;
 }
 
-/**
-  The headers line for the planning widget.
-*/
+// The headers line for the planning widget.
 .widget-planning-header {
   @include flex;
 
@@ -58,9 +52,7 @@ $zindex-planning-item: 10;
   }
 }
 
-/**
-  The planning's content (the lower part).
-*/
+// The planning's content (the lower part).
 .widget-planning-content {
   // width: max-content : 
   // This is a trick that's make the
@@ -73,24 +65,20 @@ $zindex-planning-item: 10;
   width: max-content;
 }
 
-/**
-  The right part of the widget (the calendar).
-*/
+// The right part of the widget (the calendar).
 .widget-planning-calendar {
   // Take all horizontal space
   @include flex-full-fix;
 }
 
-/*********************************************************/
-/************* The left column (labels) */
-/*********************************************************/
+// *******************************************************
+// ********** The left column (labels)
+// *******************************************************
 
-/**
-  The left column content.
-*/
+// The left column content.
 .widget-planning-label {
   @include flex-fix;
-  
+
   background-color: $background-color-empty;
   border: solid 1px $border-color-light;
   left: 0;
@@ -99,31 +87,25 @@ $zindex-planning-item: 10;
   z-index: $zindex-planning-label;
 }
 
-/*********************************************************/
-/************* The background calendar grid */
-/*********************************************************/
+// *******************************************************
+// ********** The background calendar grid
+// *******************************************************
 
-/**
-  This is the container in which there will weeks grid.
-*/
+// This is the container in which there will weeks grid.
 .widget-planning-weeks {
   @include flex;
 
   height: 100%;
 }
 
-/**
-  Each week's grid is contained in any of these.
-*/
+// Each week's grid is contained in any of these.
 .widget-planning-week {
   // Border between weeks
   border-right: solid 1px $border-color-light;
   height: 100%;
 }
 
-/**
-  And a week is filled with days.
-*/
+// And a week is filled with days.
 .widget-planning-week-days {
   @include flex;
 
@@ -132,20 +114,9 @@ $zindex-planning-item: 10;
   }
 }
 
-// /**
-//   In the content grid, days have borders.
-// */
-// .widget-planning-content {
-//   .widget-planning-week-days>* {
-//     border: solid 1px $border-color-light;
-//   }
-// }
-
-/**
-  In the planning header, the week has two lines:
-  - a label (week number, month, ...)
-  - days list
-*/
+// In the planning header, the week has two lines:
+//  - a label (week number, month, ...)
+//  - days list
 .widget-planning-header {
   .widget-planning-week {
     // Parts are one on top of each other.
@@ -168,45 +139,35 @@ $zindex-planning-item: 10;
   }
 }
 
-/**
-  In the planning content, days are here to draw a grid.
-*/
+// In the planning content, days are here to draw a grid.
 .widget-planning-content {
   .widget-planning-week-days {
     height: 100%;
-  
+
     &>* {
       @include flex-full-fix;
-  
+
       border: solid 1px $border-color-light;
       height: 100%;
     }
   }
 }
 
-/**
-  Non working days (dayoff).
-*/
+// Non working days (dayoff).
 .widget-planning-content {
   .widget-planning-dayoff {
     @include background-stripes($background-color-empty, $background-color-light);
   }
 }
 
-/*********************************************************/
-/************* Nodes */
-/*********************************************************/
+// *******************************************************
+// ********** Nodes
+// *******************************************************
 
-/**
-  A node content (itself, and childs).
-*/
-/*
-.widget-planning-node {}
-*/
+// A node content (itself, and childs).
+// .widget-planning-node {}
 
-/**
-  The node itself.
-*/
+// The node itself.
 .widget-planning-node-content {
   @include flex;
 
@@ -218,9 +179,7 @@ $zindex-planning-item: 10;
   }
 }
 
-/**
-  The node's childs
-*/
+// The node's childs
 .widget-planning-node-childs {
   .widget-planning-label {
     padding-left: 45px;
@@ -234,9 +193,9 @@ $zindex-planning-item: 10;
   }
 }
 
-/*********************************************************/
-/************* Node items (tasks, summaries, ...) */
-/*********************************************************/
+// *******************************************************
+// ********** Node items (tasks, summaries, ...)
+// *******************************************************
 
 .widget-planning-calendar {
   position: relative; // so that childs absolute refers to parent.
@@ -284,7 +243,7 @@ $zindex-planning-item: 10;
 }
 
 .widget-planning-item-txt {
-  color: #FFF;
+  color: $color-filled;
   max-width: 100%;
   overflow: hidden;
   padding: 0 6px;
