--- a/src/public/scss/widgets/_planning.scss
+++ b/src/public/scss/widgets/_planning.scss
@@ -263,3 +263,42 @@ $zindex-planning-item: 10;
 .widget-planning-split-inner {
   border-top: dotted 1px;
 }
+
+.widget-planning-item-part {
+  // default color
+  background-color: rgb(34, 34, 34);
+}
+
+.widget-planning-split-inner {
+  border-color: rgb(34, 34, 34);
+}
+
+$widget-planning-colors:
+'1' rgb(49, 74, 225),
+'2' rgb(39, 122, 245),
+'3' rgb(72, 177, 237),
+'4' rgb(56, 180, 176),
+'5' rgb(147, 182, 25),
+'6' rgb(226, 144, 0),
+'7' rgb(238, 103, 29),
+'8' rgb(120, 60, 37),
+'9' rgb(203, 27, 106),
+'10' rgb(162, 62, 187),
+'11' rgb(108, 55, 205),
+'unallocated' rgb(153, 153, 153),
+'partially' rgb(136, 205, 164),
+'full' rgb(34, 161, 85),
+'overloaded' rgb(237, 47, 54),
+'off' rgb(90, 95, 115);
+
+@each $color-name, $color in $widget-planning-colors {
+  &[data-widget-planning-color='#{$color-name}'] {
+    .widget-planning-item-part {
+      background-color: $color;
+    }
+
+    .widget-planning-split-inner {
+      border-color: $color;
+    }
+  }
+}
